# pebble-firmware

./: .gitmodules  README.md  et --hard ff8593ffc42343aefe962aaf0d5be3cd3640b828  pc-nrfconnect-programmer-1.4.2.tgz
2020poc/: .gitignore
2020poc/doc/: pebble固件开发说明.docx  ~$bble固件开发说明.docx
2020poc/firmware/: nrf9160_pca20035_firmware_upgrade_app_0.1.0.hex
2020poc/toolchain/: INSTALL.txt  SEGGER Embedded Studio.cmd  git-cmd.cmd
2020poc/toolchain/cmake/: NcsToolchainConfig.cmake  NcsToolchainConfigVersion.cmake
2020poc/toolchain/cmd/: env.cmd
2020poc/toolchain/ncsmgr/: manifest.env  ncsmgr  ncsmgr_info.sh  ncsmgr_init-ncs.sh  (+1 more)
bootloader/mcuboot/: root-ec-p256.pem
doc/: pebble固件开发说明.docx
iotex-pc-nrfconnect-programmer/: README.md
iotex-pc-nrfconnect-programmer/Linux/: README.md
iotex-pc-nrfconnect-programmer/Windows/: README.md  pc-nrfconnect-programmer-1.4.2.tgz
nRFConnect/pc-nrfconnect-programmer/: package-lock.json  package.json
nrf/applications/asset_tracker/: CMakeLists.txt  Kconfig  prj_iotex_pebble_hw20ns.conf  prj_pebble.conf  prj_thingy91_nrf9160ns.conf  style.bat  style.sh
nrf/applications/asset_tracker/src/: certificates.h  main.c
nrf/applications/asset_tracker/src/antenna_sdk/src/: CMakeLists.txt  config.h
nrf/applications/asset_tracker/src/bme/: bme680_helper.c  bme680_helper.h
nrf/applications/asset_tracker/src/hal/: CMakeLists.txt  adc.c  hal_adc.c  hal_gpio.c
nrf/applications/asset_tracker/src/icm/: icm42605_helper.c  icm42605_helper.h
nrf/applications/asset_tracker/src/modem/: modem_helper.c  modem_helper.h
nrf/applications/asset_tracker/src/mqtt/: config.c  config.h  mqtt.c  mqtt.h  payload.c
nrf/applications/asset_tracker/src/nvs/: local_storage.c  local_storage.h  local_storage_test.c
nrf/applications/asset_tracker/src/sign/: ecdsa.c  ecdsa.h
nrf/applications/asset_tracker/src/ui/: led_pwm.c
nrf/applications/asset_tracker/src/ui/include/: ui.h
nrf/applications/asset_tracker/src/unittest/: Kconfig  mqtt_unittest.c  unittest.c
(+649 files in other folders)
